fixed margin causing horizontal scroll bar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,13 +15,13 @@ body {
 header {
     text-align: center;
     background-color: var(--bg-color);
-    margin: 0 -10px;
+    margin: 0;
     padding: 30px 0;
 }
 
 nav {
     display: flex;
-    margin: 0 -10px;
+    margin: 0;
     background-color: var(--bg-color);
     flex-direction: row;
     justify-content: flex-end;
@@ -39,7 +39,7 @@ nav a {
     filter: contrast(1);
     background-position: center;
     background-size: cover;
-    margin: 0 -10px;
+    margin: 0;
 }
 .hero-text {
     display: flex;
@@ -86,6 +86,7 @@ main {
     border-style: dotted none;
     border-color: var(--main-text-color);
     border-width: 4px;
+    padding: 0 15px;
 }
 
 .maincard {
@@ -112,7 +113,7 @@ footer {
     display: flex;
     flex-direction: row;
     background-color: var(--bg-color);
-    margin: 0 -10px;
+    margin: 0;
     padding: 30px 0;
 }
 
